# Python-Module-08

ex01/: loading.py  pyproject.toml
ex02/: .env.example  oracle.py
